feat: renamed, small fixes from previous iteration

--- a/thesis.tex
+++ b/thesis.tex
@@ -111,6 +111,8 @@
 \usepackage{floatrow} %% Putting captions above tables
 \floatsetup[table]{capposition=top}
 \usepackage[babel]{csquotes} %% Context-sensitive quotation marks
+\baselineskip
+
 \begin{document}
 %% The \chapter* command can be used to produce unnumbered chapters:
 %% Unlike \chapter, \chapter* does not update the headings and does not
@@ -124,11 +126,11 @@
 Previously, it was almost impossible for people to share information globally.
 However, this has changed drastically in recent decades with the rise of the
 Internet. Each and every year, the number of people using it grows. Over
-63\,\% of people worldwide can utilize it to convey or acquire new information.
-With the increased usage also comes an increase in available resources. While
-this is great for variety, it also sometimes creates an obstacle for anyone
-searching for valuable learning materials. It can be hard to find to filter
-helpful from poorly written or incorrect.
+63\,\% of people worldwide can utilize it to convey or acquire new
+information~\cite{w3_wordpress}. With the increased usage also comes
+an increase in available resources. While this is great for variety, it also
+sometimes creates an obstacle for anyone searching for valuable learning
+materials.
 
 European Network for Academic Integrity (ENAI) is an organization comprising
 higher education institutions that strives to support its members and the public
@@ -184,7 +186,8 @@ academic integrity”~\cite{enai_about}. It aims to support its members and
 the public in the field of academic integrity, being the most extensive academic
 integrity network in Europe. Aside from organizing the European Conference on Ethics
 and Integrity in Academia, ENAI also provides several free services to the public,
-such as a glossary on academic integrity or a database of educational materials.
+such as a glossary on academic integrity, monthly webinars, self-assessment tools,
+support for the victims of academic misconduct or a database of educational materials.
 
 The mentioned database is one of the key players in supporting its efforts.
 The database runs on a WordPress plugin~\cite{lang18} made by Leoš Lang.
@@ -291,7 +294,6 @@ and the third discusses \mbox{non-functional} requirements.
 
 \section{Plugin}
 \label{sect:plugin}
-...
 
 \newpage
 
